version/0.28/_sources/api/solver/_autosummary/settings/phase_material.rst.txt
:orphan:

.. _phase_material:

phase_material
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.phase_material
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`phase_material_child <phase_material_child>`


.. rubric:: Included in:

========================   ==================

Parent                                Summary

========================   ==================
:ref:`model_3 <model_3>`       'model' child.

========================   ==================

